components/form/style/index.less
@import '../../style/themes/index';
@import '../../style/mixins/index';
@import '../../input/style/mixin';
@import '../../button/style/mixin';
@import '../../grid/style/mixin';
@import './components';
@import './inline';
@import './horizontal';
@import './vertical';
@import './mixin';

@form-prefix-cls: ~'@{ant-prefix}-form';
@form-item-prefix-cls: ~'@{form-prefix-cls}-item';
@form-font-height: ceil(@font-size-base * @line-height-base);
@form-label-margin-top: floor((@input-height-base - @form-font-height) / 2);

.@{form-prefix-cls} {
  .reset-component;
  .reset-form;

  .@{form-prefix-cls}-text {
    display: inline-block;
    margin-top: @form-label-margin-top;
    padding-right: 8px;
  }
}

// ================================================================
// =                             Item                             =
// ================================================================
.@{form-item-prefix-cls} {
  .reset-component;

  margin-bottom: @form-item-margin-bottom;
  vertical-align: top;

  &-with-help {
    margin-bottom: 0;
  }

  // ==============================================================
  // =                            Label                           =
  // ==============================================================
  &-label {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-align: right;
    vertical-align: middle;

    &-left {
      text-align: left;
    }

    > label {
      position: relative;
      display: inline-block;
      margin-top: @form-label-margin-top;
      color: @label-color;

      > .@{iconfont-css-prefix} {
        font-size: @font-size-base;
        vertical-align: top;
      }

      &.@{form-item-prefix-cls}-required::before {
        display: inline-block;
        margin-right: 4px;
        color: @label-required-color;
        font-size: @font-size-base;
        font-family: SimSun, sans-serif;
        line-height: 1;
        content: '*';

        .@{form-prefix-cls}-hide-required-mark & {
          display: none;
        }
      }

      &::after {
        & when (@form-item-trailing-colon=true) {
          content: ':';
        }
        & when not (@form-item-trailing-colon=true) {
          content: ' ';
        }

        position: relative;
        top: -0.5px;
        margin: 0 @form-item-label-colon-margin-right 0 @form-item-label-colon-margin-left;
      }

      &.@{form-item-prefix-cls}-no-colon::after {
        content: ' ';
      }
    }
  }

  // ==============================================================
  // =                            Input                           =
  // ==============================================================
  &-control {
    display: flex;
    flex-direction: column;

    &:first-child:not([class^=~"'@{ant-prefix}-col-'"]):not([class*=~"' @{ant-prefix}-col-'"]) {
      width: 100%;
    }
  }

  &-control-input {
    position: relative;
    .clearfix;
  }

  &-explain,
  &-extra {
    clear: both;
    min-height: @form-item-margin-bottom;
    padding-top: floor((@form-item-margin-bottom - @form-font-height) / 2);
    color: @text-color-secondary;
    font-size: @font-size-base;
    line-height: @line-height-base;
    transition: color 0.3s @ease-out; // sync input color transition
  }

  // ================================================================
  // =                            Status                            =
  // ================================================================
  /* Some non-status related component style is in `components.less` */

  &-has-feedback {
    // ========================= Input =========================
    .@{ant-prefix}-input {
      padding-right: 24px;
    }

    // Fix issue: https://github.com/ant-design/ant-design/issues/7854
    .@{ant-prefix}-input-search:not(.@{ant-prefix}-input-search-enter-button) {
      .@{ant-prefix}-input-suffix {
        right: 28px;
      }
    }

    .@{ant-prefix}-input-password-icon {
      margin-right: 18px;
    }

    // ======================== Switch =========================
    .@{ant-prefix}-switch {
      margin: 2px 0 4px;
    }

    // ======================== Select =========================
    // Fix overlapping between feedback icon and <Select>'s arrow.
    // https://github.com/ant-design/ant-design/issues/4431
    > .@{ant-prefix}-select .@{ant-prefix}-select-arrow,
    > .@{ant-prefix}-select .@{ant-prefix}-select-selection__clear,
    :not(.@{ant-prefix}-input-group-addon) > .@{ant-prefix}-select .@{ant-prefix}-select-arrow,
    :not(.@{ant-prefix}-input-group-addon)
      > .@{ant-prefix}-select
      .@{ant-prefix}-select-selection__clear {
      right: 28px;
    }
    > .@{ant-prefix}-select .@{ant-prefix}-select-selection-selected-value,
    :not(.@{ant-prefix}-input-group-addon)
      > .@{ant-prefix}-select
      .@{ant-prefix}-select-selection-selected-value {
      padding-right: 42px;
    }

    // ======================= Cascader ========================
    .@{ant-prefix}-cascader-picker {
      &-arrow {
        margin-right: 17px;
      }
      &-clear {
        right: 28px;
      }
    }

    // ======================== Picker =========================
    // Fix issue: https://github.com/ant-design/ant-design/issues/4783
    .@{ant-prefix}-calendar-picker,
    .@{ant-prefix}-time-picker {
      &-icon,
      &-clear {
        right: 28px;
      }
    }

    // ===================== Status Group ======================
    &.@{form-item-prefix-cls} {
      &-has-success,
      &-has-warning,
      &-has-error,
      &-is-validating {
        // ====================== Icon ======================
        .@{form-item-prefix-cls}-children-icon {
          position: absolute;
          top: 50%;
          right: 0;
          z-index: 1;
          width: @input-height-base;
          height: 20px;
          margin-top: -10px;
          font-size: @font-size-base;
          line-height: 20px;
          text-align: center;
          visibility: visible;
          animation: zoomIn 0.3s @ease-out-back;
          pointer-events: none;

          & svg {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            margin: auto;
          }
        }
      }
    }
  }

  // ======================== Success ========================
  &-has-success {
    &.@{form-item-prefix-cls}-has-feedback .@{form-item-prefix-cls}-children-icon {
      color: @success-color;
      animation-name: diffZoomIn1 !important;
    }
  }

  // ======================== Warning ========================
  &-has-warning {
    .form-control-validation(@warning-color; @warning-color; @form-warning-input-bg);

    &.@{form-item-prefix-cls}-has-feedback .@{form-item-prefix-cls}-children-icon {
      color: @warning-color;
      animation-name: diffZoomIn3 !important;
    }

    //select
    .@{ant-prefix}-select {
      &-selection {
        border-color: @warning-color;
        &:hover {
          border-color: @warning-color;
        }
      }
      &-open .@{ant-prefix}-select-selection,
      &-focused .@{ant-prefix}-select-selection {
        .active(@warning-color);
      }
    }

    // arrow and icon
    .@{ant-prefix}-calendar-picker-icon::after,
    .@{ant-prefix}-time-picker-icon::after,
    .@{ant-prefix}-picker-icon::after,
    .@{ant-prefix}-select-arrow,
    .@{ant-prefix}-cascader-picker-arrow {
      color: @warning-color;
    }

    //input-number, timepicker
    .@{ant-prefix}-input-number,
    .@{ant-prefix}-time-picker-input {
      border-color: @warning-color;
      &-focused,
      &:focus {
        .active(@warning-color);
      }
      &:not([disabled]):hover {
        border-color: @warning-color;
      }
    }

    .@{ant-prefix}-cascader-picker:focus .@{ant-prefix}-cascader-input {
      .active(@warning-color);
    }
  }

  // ========================= Error =========================
  &-has-error {
    .form-control-validation(@error-color; @error-color; @form-error-input-bg);

    &.@{form-item-prefix-cls}-has-feedback .@{form-item-prefix-cls}-children-icon {
      color: @error-color;
      animation-name: diffZoomIn2 !important;
    }

    //select
    .@{ant-prefix}-select {
      &-selection {
        border-color: @error-color;
        &:hover {
          border-color: @error-color;
        }
      }
      &-open .@{ant-prefix}-select-selection,
      &-focused .@{ant-prefix}-select-selection {
        .active(@error-color);
      }
    }

    .@{ant-prefix}-select.@{ant-prefix}-select-auto-complete {
      .@{ant-prefix}-input:focus {
        border-color: @error-color;
      }
    }

    .@{ant-prefix}-input-group-addon .@{ant-prefix}-select {
      &-selection {
        border-color: transparent;
        box-shadow: none;
      }
    }

    // arrow and icon
    .@{ant-prefix}-calendar-picker-icon::after,
    .@{ant-prefix}-time-picker-icon::after,
    .@{ant-prefix}-picker-icon::after,
    .@{ant-prefix}-select-arrow,
    .@{ant-prefix}-cascader-picker-arrow {
      color: @error-color;
    }

    //input-number, timepicker
    .@{ant-prefix}-input-number,
    .@{ant-prefix}-time-picker-input {
      border-color: @error-color;
      &-focused,
      &:focus {
        .active(@error-color);
      }
      &:not([disabled]):hover {
        border-color: @error-color;
      }
    }
    .@{ant-prefix}-mention-wrapper {
      .@{ant-prefix}-mention-editor {
        &,
        &:not([disabled]):hover {
          border-color: @error-color;
        }
      }
      &.@{ant-prefix}-mention-active:not([disabled]) .@{ant-prefix}-mention-editor,
      .@{ant-prefix}-mention-editor:not([disabled]):focus {
        .active(@error-color);
      }
    }

    .@{ant-prefix}-cascader-picker:focus .@{ant-prefix}-cascader-input {
      .active(@error-color);
    }

    // transfer
    .@{ant-prefix}-transfer {
      &-list {
        border-color: @error-color;

        &-search:not([disabled]) {
          border-color: @input-border-color;

          &:hover {
            .hover();
          }

          &:focus {
            .active();
          }
        }
      }
    }
  }

  // Patch to keep error explain color
  &-has-error-leave {
    .@{form-item-prefix-cls}-explain {
      color: @error-color;
    }
  }

  // ====================== Validating =======================
  &-is-validating {
    &.@{form-item-prefix-cls}-has-feedback .@{form-item-prefix-cls}-children-icon {
      display: inline-block;
      color: @primary-color;
    }
  }
}

.show-help-motion(@className, @keyframeName, @duration: @animation-duration-slow) {
  .make-motion(@className, @keyframeName, @duration);
  .@{className}-enter,
  .@{className}-appear {
    opacity: 0;
    animation-timing-function: @ease-in-out;
  }
  .@{className}-leave {
    animation-timing-function: @ease-in-out;
  }
}

.show-help-motion(show-help, antShowHelp, 0.3s);

@keyframes antShowHelpIn {
  0% {
    transform: translateY(-5px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes antShowHelpOut {
  to {
    transform: translateY(-5px);
    opacity: 0;
  }
}

// need there different zoom animation
// otherwise won't trigger anim
@keyframes diffZoomIn1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes diffZoomIn2 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes diffZoomIn3 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

